delete files generated by latex

--- a/PS1/report/document.tex
+++ b/PS1/report/document.tex
@@ -28,6 +28,11 @@
 }
 
 \begin{document}
+		\title{CS229 Machine Learning Problem Set 1}
+		\author{Wang Minhu}
+		\date{9, Sep, 2017}
+		\maketitle
+		\clearpage
 	\section{Logistic Regression}
 	\subsection{1}
 	
